# movie-memes

./: .gitignore  .pylintrc  Dockerfile  README.md  buildspec.yml  lambda_entrypoint.py  pyproject.toml
lambda_tests/: hello.json  search-1.json  search-2.json  snapshot.json
moviememes/: db.py  util.py
moviememes/aws_lambda/: api_utils.py  app.py  hello.py  search.py  snapshots.py  types.py  util.py
moviememes/preprocessor/: ffmpeg_compat.py  main.py  processing.py  structs.py  subtitle_compat.py
samples/: config.yaml  get_samples.sh
