[tool.poetry]
name = "movie-memes-preprocessor"
version = "0.1.0"
description = ""
authors = ["Filip Sufitchi <fsufitchi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.23"
pysub-parser = "^1.4"
tqdm = "^4.57.0"
PyYAML = "^5.4.1"
chardet = "^4.0.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.1"
autopep8 = "^1.5.5"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
